# lasting-light-ai

./: .gitignore  ACAT_PROMPT_V5_0.txt  ACAT_RESEARCH_PAPER_S-040926.docx  CARRY_BLOCK.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GADUGI-SYNC-ALPHA_Command_Center.html  LICENSE  METHODS.md  METHODS.md.ots  NOTICE  ORD_README.md  PRIVACY.md  RAHConsole.html  README.md  README_LLAI_CORRECTED.md  SECURITY.md  The Witness Stand · NEXUS-φ  VALIDATION_PLAN.md  VERSION.json  VERSION.json.ots  about.html  acat-assessment-tool.html  acat-assessment-tool.html.bak  acat-assessment-tool.html.old  acat-assessment-tool.html.ots  acat-enterprise.html  acat-schema-v5.2  acat-schema-v5.2.json  acat_validator.py  ai-instructions.txt  ai-section.html  ai_section.html  assess.html  assess_100_agents.py  calibration-garden.html  comparison-chamber.html  constellation-nav.js  deepseek-activity.html  (+63 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: assessment_submission.md  bug_report.md  feature_request.md
.github/workflows/: acat-bot-test.yml  ci.yml
.well-known/: funding-manifest-urls
_backup_20260303/: acat-assessment-tool.html  index.html  research.html  scoreboard.html
apps_scripts/: acat_apps_script_v5.1.gs
assessments/: 100-agent-report.html  LLAI_100_AGENT_REPORT.txt
batteries/lite/: prompts.jsonl
config/: llai.config.example.yaml
configs/: cel_settings.yaml  providers.yaml  run_anthropic_lite.yaml  run_lite.yaml  run_openai_lite.yaml  scoring_weights.yaml
data/: aggregate-findings.json  calibration-baseline.json
docs/: ACAT_PROMPT_V3.md  ACAT_STRESS_TEST_BANK_V1.md  THREE_POOLS_F1_SEED_V1_1.md
docs/architecture/: HUMANAIOS_INTEGRATION.md  SYSTEM_DESIGN.md
docs/consciousness/: CALIBRATION_GUIDE.md
papers/: self_assessment_gap_v5_1.md  self_assessment_gap_v5_1.tex
public/: _redirects  about.html  acat-enterprise.html  ai-section.html  assess.html  family-rooms.html  how-it-works.html  index.html  lantern-room.html  lumina_tide_pool_v2.html  methodology.html  methods.html  music-hall.html  observability-garden.html  observatory.html  recording-hall.html  research.html  the-commons.html  the-improvisation.html  the-luminarium.html  why-it-matters.html  witness-nav.js  writable-wall.html
scripts/: assess_100_agents.py  assess_20_agents.py  assess_humanaios_self.py
src/: App.tsx  index.css  index.tsx
tests/: test_cel_gating.py  test_consciousness.py
tools/: Rentahuman Manager  acat-assessment-tool.html
(+39 files in other folders)
