[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acat2c"
version = "0.1.0"
description = "ACAT — AI Behavioral Calibration Infrastructure"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.scripts]
acat2c = "acat2c.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
